# rebel-forge

./: .gitignore  README.md  dft_result.json  home.html  index.html  index.js  package-lock.json  package.json  preload.js  server.js  signin.html  skala-1.0.fun  styles.css  viewer.js
.github/workflows/: release.yml
pyscf/examples/sgx/: a12.pyscf
scripts/: run_dft.py
skala/: .gitignore  .pre-commit-config.yaml  CITATION.cff  NOTICE.md  README.md  environment.yml  pyproject.toml
skala/.github/workflows/: docs.yml  test.yml
skala/docs/: ase.ipynb  conf.py  foundry.rst  index.rst  installation.rst
skala/docs/pyscf/: scf_settings.ipynb  singlepoint.ipynb
skala/examples/cpp/cpp_integration/: .gitignore  CMakeLists.txt  README.md  download_model.py  environment.yml  main.cpp  prepare_inputs.py
skala/src/skala/: __init__.py
skala/src/skala/ase/: __init__.py  calculator.py
skala/src/skala/foundry/: __init__.py  client.py  schemas.py
skala/src/skala/functional/: __init__.py  base.py  density.py  layers.py  load.py  model.py  traditional.py
skala/src/skala/pyscf/: __init__.py  dft.py  features.py  gradients.py  numint.py  retry.py
skala/src/skala/utils/: __init__.py  scatter.py
skala/tests/: test_ase.py  test_enhancement_factor.py  test_model.py  test_nuclear_gradients.py  test_pyscf_classes.py  test_scf_retry.py  test_traditional.py
